--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "classnames": "^2.3.2",
     "daisyui": "^2.51.6",
     "firebase": "^9.22.0",
     "localforage": "^1.10.0",
@@ -21,7 +22,8 @@
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.11.2",
     "react-select": "^5.7.3",
-    "sort-by": "^1.2.0"
+    "sort-by": "^1.2.0",
+    "use-scroll-shadow": "^1.0.5"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
