--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@roje-hooks/use-title": "^1.0.3",
     "classnames": "^2.3.2",
     "daisyui": "^2.51.6",
     "firebase": "^9.22.0",
@@ -17,12 +18,15 @@
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-fontawesome": "^1.7.1",
     "react-hook-form": "^7.43.9",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.11.2",
     "react-select": "^5.7.3",
+    "react-tabs": "^6.0.1",
     "sort-by": "^1.2.0",
+    "sweetalert2": "^11.7.5",
     "use-scroll-shadow": "^1.0.5"
   },
   "devDependencies": {
