--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@roje-hooks/use-title": "^1.0.3",
+    "aos": "^2.3.4",
     "classnames": "^2.3.2",
     "daisyui": "^2.51.6",
     "firebase": "^9.22.0",
