--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
+    "react-aos": "^1.0.1",
     "react-dom": "^18.2.0",
     "react-fontawesome": "^1.7.1",
+    "react-helmet": "^6.1.0",
     "react-hook-form": "^7.43.9",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.8.0",
